--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-native-screens": "~4.10.0",
     "react-native-storage": "^1.0.1",
     "react-native-svg": "^15.11.2",
+    "react-native-uuid": "^2.0.3",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5"
   },
